[package]
name = "atomic-dbg"
version = "0.0.0"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Atomic `dbg`/`eprintln`/`eprint` macros"
documentation = "https://docs.rs/atomic-dbg"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/atomic-dbg"
edition = "2018"
keywords = ["printing", "print", "macros", "stderr"]
categories = ["development-tools"]
exclude = ["/.*"]

[target.'cfg(unix)'.dependencies]
rustix = "0.34.4"
errno = { version = "0.2.8", default-features = false }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
