[package]
name = "atomic-dbg"
version = "0.1.6"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Atomic `dbg`/`eprintln`/`eprint` macros"
documentation = "https://docs.rs/atomic-dbg"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/atomic-dbg"
edition = "2018"
keywords = ["printing", "print", "macros", "stderr"]
categories = ["development-tools"]
exclude = ["/.*"]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.0", default-features = false, features = ["stdio", "pipe"] }
errno = { version = "0.3.0", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[target.'cfg(windows)'.dependencies]
is-terminal = "0.4.0"
io-lifetimes = { version = "1.0.0", default-features = false }

[features]
default = ["errno"]
